@@ -11,163 +11,122 @@ import static org.junit.jupiter.api.Assertions.*;
 class ProfileMetadataTest {
 
     // -----------------------------------------------------------------------
-    // Getters / Setters (générés par Lombok @Data)
+    // Constructeur canonique et accesseurs du record
     // -----------------------------------------------------------------------
 
     @Test
-    void testGettersAndSetters() {
-        ProfileMetadata metadata = new ProfileMetadata();
-        metadata.setName("creedengo way");
-        metadata.setLanguage("java");
-        metadata.setRuleKeys(Arrays.asList("GCI1", "GCI2"));
-
-        assertEquals("creedengo way", metadata.getName());
-        assertEquals("java", metadata.getLanguage());
-        assertEquals(Arrays.asList("GCI1", "GCI2"), metadata.getRuleKeys());
+    void testConstructorAndAccessors() {
+        ProfileMetadata metadata = new ProfileMetadata("creedengo way", "java", List.of("GCI1", "GCI2"));
+        assertEquals("creedengo way",            metadata.name());
+        assertEquals("java",                     metadata.language());
+        assertEquals(List.of("GCI1", "GCI2"),    metadata.ruleKeys());
     }
 
     @Test
-    void testDefaultConstructorProducesNullFields() {
-        ProfileMetadata metadata = new ProfileMetadata();
-        assertNull(metadata.getName());
-        assertNull(metadata.getLanguage());
-        assertNull(metadata.getRuleKeys());
+    void testConstructorWithNullName() {
+        ProfileMetadata metadata = new ProfileMetadata(null, "java", List.of());
+        assertNull(metadata.name());
     }
 
     @Test
-    void testSetNameNull() {
-        ProfileMetadata metadata = new ProfileMetadata();
-        metadata.setName(null);
-        assertNull(metadata.getName());
+    void testConstructorWithNullLanguage() {
+        ProfileMetadata metadata = new ProfileMetadata("profile", null, List.of());
+        assertNull(metadata.language());
     }
 
     @Test
-    void testSetLanguageNull() {
-        ProfileMetadata metadata = new ProfileMetadata();
-        metadata.setLanguage(null);
-        assertNull(metadata.getLanguage());
+    void testConstructorWithNullRuleKeys() {
+        ProfileMetadata metadata = new ProfileMetadata("profile", "java", null);
+        assertNull(metadata.ruleKeys());
     }
 
     @Test
-    void testSetRuleKeysEmpty() {
-        ProfileMetadata metadata = new ProfileMetadata();
-        metadata.setRuleKeys(Collections.emptyList());
-        assertTrue(metadata.getRuleKeys().isEmpty());
+    void testConstructorWithEmptyRuleKeys() {
+        ProfileMetadata metadata = new ProfileMetadata("profile", "java", Collections.emptyList());
+        assertTrue(metadata.ruleKeys().isEmpty());
     }
 
     @Test
-    void testSetRuleKeysSingleItem() {
-        ProfileMetadata metadata = new ProfileMetadata();
-        metadata.setRuleKeys(List.of("GCI42"));
-        assertEquals(1, metadata.getRuleKeys().size());
-        assertEquals("GCI42", metadata.getRuleKeys().get(0));
+    void testConstructorWithSingleRuleKey() {
+        ProfileMetadata metadata = new ProfileMetadata("profile", "java", List.of("GCI42"));
+        assertEquals(1,       metadata.ruleKeys().size());
+        assertEquals("GCI42", metadata.ruleKeys().get(0));
     }
 
     // -----------------------------------------------------------------------
-    // equals & hashCode (générés par Lombok @Data)
+    // equals & hashCode — générés nativement par le record
     // -----------------------------------------------------------------------
 
     @Test
     void testEqualsSameValues() {
-        ProfileMetadata a = new ProfileMetadata();
-        a.setName("creedengo way");
-        a.setLanguage("java");
-        a.setRuleKeys(Arrays.asList("GCI1", "GCI2"));
-
-        ProfileMetadata b = new ProfileMetadata();
-        b.setName("creedengo way");
-        b.setLanguage("java");
-        b.setRuleKeys(Arrays.asList("GCI1", "GCI2"));
-
+        ProfileMetadata a = new ProfileMetadata("creedengo way", "java", List.of("GCI1", "GCI2"));
+        ProfileMetadata b = new ProfileMetadata("creedengo way", "java", List.of("GCI1", "GCI2"));
         assertEquals(a, b);
         assertEquals(a.hashCode(), b.hashCode());
     }
 
     @Test
     void testEqualsDifferentName() {
-        ProfileMetadata a = new ProfileMetadata();
-        a.setName("name-A");
-        a.setLanguage("java");
-        a.setRuleKeys(Collections.emptyList());
-
-        ProfileMetadata b = new ProfileMetadata();
-        b.setName("name-B");
-        b.setLanguage("java");
-        b.setRuleKeys(Collections.emptyList());
-
+        ProfileMetadata a = new ProfileMetadata("name-A", "java", Collections.emptyList());
+        ProfileMetadata b = new ProfileMetadata("name-B", "java", Collections.emptyList());
         assertNotEquals(a, b);
     }
 
     @Test
     void testEqualsDifferentLanguage() {
-        ProfileMetadata a = new ProfileMetadata();
-        a.setName("profile");
-        a.setLanguage("java");
-        a.setRuleKeys(Collections.emptyList());
-
-        ProfileMetadata b = new ProfileMetadata();
-        b.setName("profile");
-        b.setLanguage("python");
-        b.setRuleKeys(Collections.emptyList());
-
+        ProfileMetadata a = new ProfileMetadata("profile", "java",   Collections.emptyList());
+        ProfileMetadata b = new ProfileMetadata("profile", "python", Collections.emptyList());
         assertNotEquals(a, b);
     }
 
     @Test
     void testEqualsDifferentRuleKeys() {
-        ProfileMetadata a = new ProfileMetadata();
-        a.setName("profile");
-        a.setLanguage("java");
-        a.setRuleKeys(List.of("GCI1"));
-
-        ProfileMetadata b = new ProfileMetadata();
-        b.setName("profile");
-        b.setLanguage("java");
-        b.setRuleKeys(List.of("GCI2"));
-
+        ProfileMetadata a = new ProfileMetadata("profile", "java", List.of("GCI1"));
+        ProfileMetadata b = new ProfileMetadata("profile", "java", List.of("GCI2"));
         assertNotEquals(a, b);
     }
 
     @Test
     void testEqualsWithNull() {
-        ProfileMetadata a = new ProfileMetadata();
+        ProfileMetadata a = new ProfileMetadata("profile", "java", List.of());
         assertNotEquals(null, a);
     }
 
     @Test
     void testEqualsWithDifferentType() {
-        ProfileMetadata a = new ProfileMetadata();
+        ProfileMetadata a = new ProfileMetadata("profile", "java", List.of());
         assertNotEquals("a string", a);
     }
 
     @Test
-    void testEqualsSelf() {
-        ProfileMetadata a = new ProfileMetadata();
-        a.setName("x");
-        // Réflexivité : un objet est égal à lui-même
-        assertTrue(a.equals(a));
+    void testEqualsAndHashCodeContract() {
+        // Contrat Java : deux objets égaux doivent avoir le même hashCode
+        ProfileMetadata a = new ProfileMetadata("x", "java", List.of("GCI1"));
+        ProfileMetadata b = new ProfileMetadata("x", "java", List.of("GCI1"));
+        assertEquals(a, b);
+        assertEquals(a.hashCode(), b.hashCode(),
+            "Deux records égaux doivent avoir le même hashCode (contrat Java)");
     }
 
     @Test
     void testHashCodeConsistency() {
-        ProfileMetadata a = new ProfileMetadata();
-        a.setName("creedengo way");
-        a.setLanguage("java");
-        a.setRuleKeys(List.of("GCI1"));
+        ProfileMetadata a = new ProfileMetadata("creedengo way", "java", List.of("GCI1"));
         assertEquals(a.hashCode(), a.hashCode());
     }
 
+    @Test
+    void testHashCodeForNullFields() {
+        ProfileMetadata a = new ProfileMetadata(null, null, null);
+        assertDoesNotThrow(a::hashCode);
+    }
+
     // -----------------------------------------------------------------------
-    // toString (généré par Lombok @Data)
+    // toString — généré nativement par le record
     // -----------------------------------------------------------------------
 
     @Test
     void testToStringContainsFieldValues() {
-        ProfileMetadata metadata = new ProfileMetadata();
-        metadata.setName("creedengo way");
-        metadata.setLanguage("java");
-        metadata.setRuleKeys(Arrays.asList("GCI1", "GCI2"));
-
+        ProfileMetadata metadata = new ProfileMetadata("creedengo way", "java", List.of("GCI1", "GCI2"));
         String str = metadata.toString();
         assertTrue(str.contains("creedengo way"), "toString doit contenir le nom");
         assertTrue(str.contains("java"),           "toString doit contenir le langage");
@@ -176,33 +135,58 @@ class ProfileMetadataTest {
     }
 
     @Test
+    void testToStringRecordFormat() {
+        // Le toString d'un record Java suit le format :
+        // NomDuRecord[composant1=valeur1, composant2=valeur2, ...]
+        ProfileMetadata metadata = new ProfileMetadata("creedengo way", "java", List.of("GCI1"));
+        String str = metadata.toString();
+        assertEquals(
+            "ProfileMetadata[name=creedengo way, language=java, ruleKeys=[GCI1]]",
+            str,
+            "Le toString d'un record doit suivre le format NomRecord[champ=valeur, ...]"
+        );
+    }
+
+    @Test
     void testToStringWithNullFields() {
-        ProfileMetadata metadata = new ProfileMetadata();
+        ProfileMetadata metadata = new ProfileMetadata(null, null, null);
         String str = metadata.toString();
         assertNotNull(str);
-        // Lombok génère "null" pour les champs null
         assertTrue(str.contains("null"));
     }
 
     // -----------------------------------------------------------------------
-    // canEqual (généré par Lombok @Data)
+    // Structure du record
     // -----------------------------------------------------------------------
 
     @Test
-    void testCanEqualSameType() throws Exception {
-        ProfileMetadata a = new ProfileMetadata();
-        ProfileMetadata b = new ProfileMetadata();
-        java.lang.reflect.Method canEqual = ProfileMetadata.class.getDeclaredMethod("canEqual", Object.class);
-        canEqual.setAccessible(true);
-        assertTrue((Boolean) canEqual.invoke(a, b));
+    void testIsRecord() {
+        assertTrue(ProfileMetadata.class.isRecord(),
+            "ProfileMetadata doit être un record Java");
     }
 
     @Test
-    void testCanEqualDifferentType() throws Exception {
-        ProfileMetadata a = new ProfileMetadata();
-        java.lang.reflect.Method canEqual = ProfileMetadata.class.getDeclaredMethod("canEqual", Object.class);
-        canEqual.setAccessible(true);
-        assertFalse((Boolean) canEqual.invoke(a, "a string"));
+    void testRecordComponentCount() {
+        assertEquals(3, ProfileMetadata.class.getRecordComponents().length,
+            "ProfileMetadata doit avoir exactement 3 composants");
     }
+
+    @Test
+    void testRecordComponentNames() {
+        var components = ProfileMetadata.class.getRecordComponents();
+        assertEquals("name",     components[0].getName());
+        assertEquals("language", components[1].getName());
+        assertEquals("ruleKeys", components[2].getName());
+    }
+
+    @Test
+    void testRecordHasNoSetters() {
+        long setterCount = Arrays.stream(ProfileMetadata.class.getMethods())
+            .filter(m -> m.getName().startsWith("set"))
+            .count();
+        assertEquals(0, setterCount, "Un record ne doit pas avoir de setters");
+    }
+
 }
+
 
